Hold onto AppHighlights and restore them once the page is loaded. https://bugs.webkit.org/show_bug.cgi?id=222640

Reviewed by Devin Rousso.

* Modules/highlight/AppHighlightStorage.cpp:
(WebCore::AppHighlightStorage::restoreAppHighlight):
(WebCore::AppHighlightStorage::restoreUnrestoredAppHighlights):
* Modules/highlight/AppHighlightStorage.h:
* dom/Document.cpp:
(WebCore::Document::finishedParsing):


Canonical link: https://commits.webkit.org/235076@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274155 268f45cc-cd09-0410-ab3c-d52691b4dbfc